// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <Table> to render customized 1`] = `
<div
  className="gds-table--responsive"
>
  <table
    className="gds-table custom-class gds-table--lg gds-table--inverse gds-table--inverse-striped"
  >
    <thead
      className=""
    >
      <tr
        className="gds-table__row"
      >
        <th
          className="gds-table__header -text-left gds-table__header--secondary"
          onClick={[Function]}
        >
          foo
        </th>
        <th
          className="gds-table__header -text-left gds-table__header--secondary"
          onClick={[Function]}
        >
          bar
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className="gds-table__row -cursor--pointer gds-table__row--inverse gds-table__row--striped-inverse"
        onClick={[Function]}
      >
        <td
          className=""
        >
          Foo
        </td>
        <td
          className=""
        >
          Bar
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Expect <Table> to render properly 1`] = `
<table
  className="gds-table custom-class gds-table--lg"
>
  <tbody
    className=""
  >
    <tr
      className="gds-table__row -cursor--pointer"
      onClick={[Function]}
    >
      <td
        className=""
      >
        Foo
      </td>
      <td
        className=""
      >
        Bar
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Expect <Table> to render using advanced configs 1`] = `
<table
  className="gds-table custom-class gds-table--lg"
>
  <tbody
    className=""
  >
    <tr
      className="gds-table__row -cursor--pointer"
      onClick={[Function]}
    >
      <td
        className=""
      >
        Foo
      </td>
      <td
        className=""
      >
        Bar
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Expect <Table> to render when used without columns prop 1`] = `
<table
  className="gds-table"
>
  <tbody
    className=""
  >
    <td
      className=""
    >
      Foo
    </td>
  </tbody>
</table>
`;

exports[`Expect <Table> to render with expandable rows 1`] = `
<table
  className="gds-table custom-class gds-table--lg gds-table--expandable"
>
  <tbody
    className=""
  >
    <tr
      className="gds-table__row -cursor--pointer"
      onClick={[Function]}
    >
      <td
        className=""
      >
        Foo
      </td>
      <td
        className="chevron-expander collapsed"
        data-testid="row-0-key-1"
        onClick={[Function]}
      >
        <i
          className="-cursor--pointer -color-tx-lt-4 fas fa-chevron-down  "
          style={
            {
              "fontSize": 22,
            }
          }
        />
      </td>
    </tr>
    <tr
      className="gds-table__row gds-table--expandable-row"
      data-testid="expandable-row-0"
    >
      <td
        className=""
        colSpan={2}
      >
        <div
          className="gds-table--collapsible"
          style={
            {
              "height": "0px",
            }
          }
        >
          <div>
            <div>
              Expandable - 
              Bar
            </div>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
